fixed contact form validation on mobile

--- a/css/contact.css
+++ b/css/contact.css
@@ -183,11 +183,6 @@ footer .nav-link:hover {
 		font-size: 18px
 	}
 
-	.form {
-		margin-top: 5em;
-
-	}
-
 	.bg {
 		padding: 2em 1em;
 	}
